ci: fix deployment script
Two fixes to the deployment:

 * fix typo `runs` -> `run`
 * fix missing variable-expansion `$`

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: "main"
-        repository: "{{ github.repository_owner }}/home"
+        repository: "${{ github.repository_owner }}/home"
     - name: "Build Pages"
-      runs: make ssg-build-docker
+      run: make ssg-build-docker
     - name: "Upload Pages Artifact"
       uses: actions/upload-pages-artifact@v1
       with:
